nats-micro/tests/ui/v2_missing_required_auth.stderr
error: `auth = required` requires an `Auth<T>` argument
 --> tests/ui/v2_missing_required_auth.rs:6:14
  |
6 |     async fn me() {}
  |              ^^
